<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/eventify_background"
    android:paddingStart="20dp"
    android:paddingTop="18dp"
    android:paddingEnd="20dp"
    tools:context=".ui.fragments.SpeakersFragment">

    <ImageButton
        android:id="@+id/btnSpeakersMenu"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/common_menu"
        android:padding="10dp"
        android:src="@drawable/ic_eventify_menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/eventify_text_primary" />

    <TextView
        android:id="@+id/tvSpeakersTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/speakers_title"
        android:textColor="@color/ColorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/btnSpeakersMenu"
        app:layout_constraintEnd_toStartOf="@id/btnSpeakersSearch"
        app:layout_constraintStart_toEndOf="@id/btnSpeakersMenu"
        app:layout_constraintTop_toTopOf="@id/btnSpeakersMenu"
        tools:text="Ponentes" />

    <ImageButton
        android:id="@+id/btnSpeakersSearch"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/common_search"
        android:padding="10dp"
        android:src="@drawable/ic_eventify_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/eventify_text_primary" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSpeakers"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingTop="18dp"
        android:paddingBottom="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSpeakersMenu"
        tools:itemCount="6"
        tools:listitem="@layout/item_speaker" />

</androidx.constraintlayout.widget.ConstraintLayout>
