<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_splash_gradient"
    tools:context=".ui.activities.SplashScreenActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvSplashLogo"
        android:layout_width="116dp"
        android:layout_height="116dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="30dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toTopOf="@id/tvSplashTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:strokeColor="#70FFFFFF"
        app:strokeWidth="1dp">

        <ImageView
            android:id="@+id/ivLogoEventify"
            android:layout_width="78dp"
            android:layout_height="78dp"
            android:layout_gravity="center"
            android:contentDescription="@string/splash_logo_description"
            android:scaleType="fitCenter"
            android:src="@drawable/eventify_logo_sin_nombre" />
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/tvSplashTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="sans-serif-black"
        android:letterSpacing="0.02"
        android:text="@string/splash_title"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tvSplashSubtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvSplashLogo"
        tools:text="EVENTIFY" />

    <TextView
        android:id="@+id/tvSplashSubtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="56dp"
        android:gravity="center"
        android:lineSpacingExtra="3dp"
        android:text="@string/splash_subtitle"
        android:textColor="#EAF1FF"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@id/tvSplashDots"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSplashTitle"
        tools:text="Tu gu&#237;a de eventos tecnol&#243;gicos" />

    <TextView
        android:id="@+id/tvSplashDots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="86dp"
        android:letterSpacing="0.18"
        android:text="&#8226;&#8226;&#8226;"
        android:textColor="#CCFFFFFF"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSplashSubtitle" />

</androidx.constraintlayout.widget.ConstraintLayout>
